- storing api responses for later use

--- a/src/FlatMate.Migration/FlatMate.Migration.csproj
+++ b/src/FlatMate.Migration/FlatMate.Migration.csproj
@@ -13,8 +13,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-24" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0-rc" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-26" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
   </ItemGroup>
 </Project>
