--- a/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
+++ b/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
@@ -16,8 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-24" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0-rc" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-26" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
   </ItemGroup>
   
   <ItemGroup>
