--- a/src/FlatMate.Module.Infrastructure/FlatMate.Module.Infrastructure.csproj
+++ b/src/FlatMate.Module.Infrastructure/FlatMate.Module.Infrastructure.csproj
@@ -13,8 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-24" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0-rc" />
+    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-26" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
   </ItemGroup>
 
   <ItemGroup>
