--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -10,6 +10,11 @@
     "sourceMap": false,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES5"
+    "target": "ES5",
+    "paths": {
+      "@app/*": [
+        "*"
+      ]
+    }
   }
 }
