- removed unfinished change

--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -10,11 +10,6 @@
     "sourceMap": false,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES5",
-    "paths": {
-      "@app/*": [
-        "*"
-      ]
-    }
+    "target": "ES5"
   }
 }
