--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "lib": [ "dom", "es5", "scripthost", "es2015" ],
+    "noEmitHelpers": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noImplicitReturns": true,
