--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -8,7 +8,7 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "skipLibCheck": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
     "target": "ES5"
