--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -6,8 +6,10 @@
   },
   "Offers": {
     "Rewe": {
-      "HostUrl": "https://mobile-api.rewe.de",
-      "MarketId": 1931046
+      "HostUrl": "https://mobile-api.rewe.de"
+    },
+    "Penny": {
+      "HostUrl": "https://api.penny.de"
     }
   }
 }
