- add elasticsearch sink

--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -20,6 +20,14 @@
       },
       {
         "Name": "LiterateConsole"
+      },
+      {
+        "Name": "Elasticsearch",
+        "args": {
+          "autoRegisterTemplate": true,
+          "nodeUris": "http://192.168.1.101:9200",
+          "indexFormat": "flatmate-{0:yyyy}"
+        }
       }
     ]
   }
