--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -17,6 +17,14 @@
       {
         "Name": "LiterateConsole",
         "args": { "restrictedToMinimumLevel": "Information" }
+      },
+      {
+        "Name": "Elasticsearch",
+        "args": {
+          "autoRegisterTemplate": true,
+          "nodeUris": "http://192.168.1.101:9200",
+          "indexFormat": "flatmate-dev-{0:yyyy}"
+        }
       }
     ]
   }
