- changed elastic index names

--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -26,7 +26,7 @@
         "args": {
           "autoRegisterTemplate": true,
           "nodeUris": "http://192.168.1.101:9200",
-          "indexFormat": "flatmate-{0:yyyy}"
+          "indexFormat": "app-flatmate-{0:yyyy.MM}"
         }
       }
     ]
