--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -23,7 +23,7 @@
         "args": {
           "autoRegisterTemplate": true,
           "nodeUris": "http://192.168.1.101:9200",
-          "indexFormat": "flatmate-dev-{0:yyyy}"
+          "indexFormat": "dev-flatmate-{0:yyyy.MM}"
         }
       }
     ]
