- add aldi - switch to restease

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -17,6 +17,15 @@
       {
         "Name": "LiterateConsole",
         "args": { "restrictedToMinimumLevel": "Information" }
+      },
+      {
+        "Name": "Elasticsearch",
+        "args": {
+          "autoRegisterTemplate": true,
+          "nodeUris": "http://192.168.1.101:9200",
+          "indexFormat": "dev-flatmate-{0:yyyy.MM}",
+          "inlineFields":  true
+        }
       }
     ]
   }
