--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -10,6 +10,15 @@
     },
     "Penny": {
       "HostUrl": "https://api.penny.de"
+    },
+    "Aldi": {
+      "HostUrl": "http://ws.aldi-nord.de/"
+    }
+  },
+  "Serilog": {
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "flatmate"
     }
   }
 }
