--- a/src/FlatMate.Module.Offers/FlatMate.Module.Offers.csproj
+++ b/src/FlatMate.Module.Offers/FlatMate.Module.Offers.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
     <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-28" />
-    <PackageReference Include="Refit" Version="4.0.1" />
+    <PackageReference Include="RestEase" Version="1.4.4" />
     <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
   </ItemGroup>
 
