--- a/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
+++ b/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
     <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-28" />
     <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
+    <PackageReference Include="App.Metrics.Abstractions" Version="2.0.0-alpha" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
