--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -20,5 +20,19 @@
     "Properties": {
       "Application": "flatmate"
     }
+  },
+  "MetricsOptions": {
+    "DefaultContextLabel": "FlatMate",
+    "Enabled": true
+  },
+  "MetricsWebTrackingOptions": {
+    "IgnoredHttpStatusCodes": [],
+    "IgnoredRoutesRegexPatterns": []
+  },
+  "MetricEndpointsOptions": {
+    "MetricsEndpointEnabled": true,
+    "MetricsTextEndpointEnabled": false,
+    "PingEndpointEnabled": false,
+    "EnvironmentInfoEndpointEnabled": false
   }
 }
