--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -15,6 +15,10 @@
     <Content Update="wwwroot/node_modules/**" CopyToPublishDirectory="Never" />
     <Content Include="_Migrations/**" CopyToPublishDirectory="Always" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Metrics\RequestMetricMiddleware.cs" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="App.Metrics" Version="2.0.0-alpha" />
