--- a/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
+++ b/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.1"/>
     <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-28" />
     <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
   </ItemGroup>
