- dependency upgrade - rebuild favorite manage page

--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -16,7 +16,10 @@
     }
   },
   "Serilog": {
-    "Enrich": [ "FromLogContext" ],
+    "Enrich": [
+      "FromLogContext",
+      "WithDemystifiedStackTraces"
+    ],
     "Properties": {
       "Application": "flatmate"
     }
