--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -9,6 +9,7 @@
     "atomicjs": "3.2.1",
     "blazy": "1.8.2",
     "es6-promise": "4.1.1",
+    "glob": "7.1.2",
     "knockout": "3.4.2",
     "knockout-dragdrop": "2.6.1"
   },
@@ -18,7 +19,7 @@
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "node-sass": "4.6.0",
+    "node-sass": "4.6.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
     "ts-loader": "3.1.1",
