--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "baseUrl": "./js",
+    "forceConsistentCasingInFileNames": true,
     "lib": [ "dom", "es5", "scripthost", "es2015" ],
     "noEmitHelpers": true,
     "noImplicitAny": true,
