--- a/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
+++ b/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\build\common.props"/>
+    <Import Project="..\..\build\common.props"/>
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="App.Metrics.Abstractions" Version="2.0.0-alpha"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.1"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1"/>
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-28"/>
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0"/>
+      <PackageReference Include="App.Metrics.Abstractions" Version="2.0.0-alpha"/>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.1"/>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1"/>
+      <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.0.0"/>
+      <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-29"/>
+      <PackageReference Include="Roslynator.Analyzers" Version="1.5.0"/>
   </ItemGroup>
 </Project>
