- dependency update - tile styling

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -10,6 +10,7 @@
         "Microsoft": "Information"
       }
     },
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId", "WithDemystifiedStackTraces"],
     "WriteTo": [
       {
         "Name": "Trace"
@@ -17,14 +18,6 @@
       {
         "Name": "LiterateConsole",
         "args": { "restrictedToMinimumLevel": "Information" }
-      },
-      {
-        "Name": "Elasticsearch",
-        "args": {
-          "autoRegisterTemplate": true,
-          "nodeUris": "http://192.168.1.101:9200",
-          "indexFormat": "dev-flatmate-{0:yyyy.MM}"
-        }
       }
     ]
   }
