--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -10,6 +10,7 @@
         "Microsoft": "Warning"
       }
     },
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId", "WithDemystifiedStackTraces"],
     "WriteTo": [
       {
         "Name": "RollingFile",
