- fix test - add company to products and offers

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=flatmate;Integrated Security=true"
+    "DefaultConnection": "Server=localhost\\sqlexpress;Database=flatmate;Integrated Security=true"
   },
   "Serilog": {
     "MinimumLevel": {
