--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -25,7 +25,7 @@
       {
         "Name": "Elasticsearch",
         "args": {
-          "autoRegisterTemplate": true,
+          "templateName": "app-logs",
           "nodeUris": "http://192.168.1.101:9200",
           "indexFormat": "app-flatmate-{0:yyyy.MM}"
         }
