- move buildinstructions to different prop file - use sql server auth for dev environment

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -1,6 +1,10 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\sqlexpress;Database=flatmate;Integrated Security=true"
+    "Flatmate": {
+      "Url": "Server=localhost\\sqlexpress;Database=flatmate;",
+      "User": "flatmate",
+      "Password": "flatmate"
+    }
   },
   "Serilog": {
     "MinimumLevel": {
@@ -10,14 +14,18 @@
         "Microsoft": "Information"
       }
     },
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId", "WithDemystifiedStackTraces"],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithDemystifiedStackTraces"
+    ],
     "WriteTo": [
       {
-        "Name": "Trace"
-      },
-      {
         "Name": "LiterateConsole",
-        "args": { "restrictedToMinimumLevel": "Information" }
+        "args": {
+          "restrictedToMinimumLevel": "Information"
+        }
       }
     ]
   }
