--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -1,6 +1,10 @@
 ﻿{
   "ConnectionStrings": {
-    "Production": "Server=localhost;Database=flatmate;"
+    "Flatmate": {
+      "Url": "Server=localhost;Database=flatmate;",
+      "User": "",
+      "Password": ""
+    }
   },
   "Serilog": {
     "MinimumLevel": {
@@ -10,7 +14,12 @@
         "Microsoft": "Warning"
       }
     },
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId", "WithDemystifiedStackTraces"],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithDemystifiedStackTraces"
+    ],
     "WriteTo": [
       {
         "Name": "RollingFile",
