--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -1,5 +1,6 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
   <Import Project="..\..\build\common.props" />
+    <Import Project="..\..\build\web-build.props"/>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RuntimeIdentifiers>win-x64,linux-x64</RuntimeIdentifiers>
@@ -31,7 +32,6 @@
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="5.5.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
-    <PackageReference Include="Serilog.Sinks.Trace" Version="2.1.0" />
     <PackageReference Include="SodaPop.ConfigExplorer" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="1.1.0" />
@@ -44,25 +44,4 @@
     <ProjectReference Include="..\FlatMate.Module.Lists\FlatMate.Module.Lists.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Offers\FlatMate.Module.Offers.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Areas\Lists\Views\Shared\Components" />
-    <Folder Include="Views\Shared\Components" />
-  </ItemGroup>
-  <Target Name="PrintVersion" BeforeTargets="BeforeBuild">
-    <Message Text="Building $(AssemblyName) version $(Version)" Importance="High" />
-  </Target>
-  <Target Name="BuildFrontend" AfterTargets="AfterBuild" Condition="'$(Configuration)' == 'Release'">
-    <ItemGroup>
-      <FrontendFiles Include="./wwwroot/dist/*" />
-    </ItemGroup>
-    <Delete Files="@(FrontendFiles)" />
-    <Exec Command="yarn --force" WorkingDirectory="wwwroot" />
-    <Exec Command="./node_modules/.bin/webpack --env=$(Configuration)" WorkingDirectory="wwwroot" />
-  </Target>
-  <Target Name="PublishFrontend" AfterTargets="PrepareForPublish" DependsOnTargets="BuildFrontend">
-    <ItemGroup>
-      <DistFolder Include="wwwroot/dist/**/*" />
-    </ItemGroup>
-    <Copy SourceFiles="@(DistFolder)" DestinationFolder="$(PublishDir)\wwwroot\dist\%(RecursiveDir)" />
-  </Target>
 </Project>
