--- a/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
+++ b/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
-    <PackageReference Include="prayzzz.Common" Version="1.0.0-dev-30" />
+      <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-45.develop"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\FlatMate.Migration\FlatMate.Migration.csproj" />
