--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -10,22 +10,22 @@
     "atomicjs": "3.2.1",
     "blazy": "1.8.2",
     "dateformat": "3.0.2",
-    "es6-promise": "4.2.2",
+    "es6-promise": "4.2.4",
     "glob": "7.1.2",
-    "knockout": "3.4.2",
+    "knockout": "3.5.0-beta",
     "knockout-dragdrop": "2.6.1"
   },
   "devDependencies": {
     "@types/blazy": "1.5.30",
-    "@types/knockout": "3.4.47",
-    "css-loader": "0.28.7",
+    "@types/knockout": "3.4.49",
+    "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "node-sass": "4.7.2",
     "sass-loader": "6.0.6",
-    "style-loader": "0.19.1",
-    "ts-loader": "3.2.0",
-    "tslint": "5.8.0",
+    "style-loader": "0.20.1",
+    "ts-loader": "3.4.0",
+    "tslint": "5.9.1",
     "typescript": "2.6.2",
     "url-loader": "0.6.2",
     "webpack": "3.10.0"
