--- a/src/FlatMate.Migration/FlatMate.Migration.csproj
+++ b/src/FlatMate.Migration/FlatMate.Migration.csproj
@@ -7,8 +7,8 @@
     <EmbeddedResource Include="Resources\*.sql" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.*"/>
       <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
     <PackageReference Include="System.Data.SqlClient" Version="4.4.2" />
   </ItemGroup>
