--- a/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
+++ b/src/FlatMate.Module.Account/FlatMate.Module.Account.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.*"/>
       <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
   </ItemGroup>
   <ItemGroup>
