--- a/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
+++ b/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="App.Metrics.Abstractions" Version="2.0.0-alpha" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
-    <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.0.0" />
+      <PackageReference Include="App.Metrics.Abstractions" Version="2.0.0"/>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.NETCore.Platforms" Version="2.0.*"/>
       <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
   </ItemGroup>
 </Project>
