--- a/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
+++ b/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.*"/>
       <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
   </ItemGroup>
   <ItemGroup>
