--- a/src/FlatMate.Module.Offers/FlatMate.Module.Offers.csproj
+++ b/src/FlatMate.Module.Offers/FlatMate.Module.Offers.csproj
@@ -7,14 +7,14 @@
     <EmbeddedResource Include="Resources\**\*.*" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.*"/>
       <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
-    <PackageReference Include="RestEase" Version="1.4.4" />
+      <PackageReference Include="RestEase" Version="1.4.5"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Module.Account\FlatMate.Module.Account.csproj" />
