--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -16,17 +16,10 @@
       <PackageReference Include="App.Metrics" Version="2.0.0"/>
       <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="2.0.0"/>
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2"/>
-      <PackageReference Include="Microsoft.AspNetCore" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.ViewCompilation" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.AspNetCore.ResponseCaching" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6"/>
       <PackageReference Include="prayzzz.Common.Mvc" Version="1.0.0-unstable-46.develop"/>
     <PackageReference Include="Serilog" Version="2.6.0" />
-    <PackageReference Include="Serilog.Enrichers.Demystify" Version="0.1.0-dev-00011" />
+      <PackageReference Include="Serilog.Enrichers.Demystify" Version="0.1.0-dev-00016"/>
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
       <PackageReference Include="Serilog.Settings.Configuration" Version="2.6.1"/>
       <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="6.3.0"/>
