--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -9,26 +9,25 @@
     "array.prototype.find": "2.0.4",
     "atomicjs": "3.2.1",
     "blazy": "1.8.2",
-    "dateformat": "3.0.2",
+    "dateformat": "3.0.3",
     "es6-promise": "4.2.4",
     "glob": "7.1.2",
-    "knockout": "3.5.0-beta",
-    "knockout-dragdrop": "2.6.1"
+    "knockout": "3.5.0-beta"
   },
   "devDependencies": {
     "@types/blazy": "1.5.30",
-    "@types/knockout": "3.4.49",
-    "css-loader": "0.28.9",
+    "@types/knockout": "3.4.53",
+    "css-loader": "0.28.11",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "node-sass": "4.7.2",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.20.1",
-    "ts-loader": "3.4.0",
+    "file-loader": "1.1.11",
+    "node-sass": "4.8.3",
+    "sass-loader": "6.0.7",
+    "style-loader": "0.20.3",
+    "ts-loader": "3.5.0",
     "tslint": "5.9.1",
-    "typescript": "2.6.2",
-    "url-loader": "0.6.2",
-    "webpack": "3.10.0"
+    "typescript": "2.8.1",
+    "url-loader": "1.0.1",
+    "webpack": "3.11.0"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack",
