--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -5,14 +5,14 @@
   "repository": {},
   "license": "MIT",
   "dependencies": {
-    "@types/dateformat": "^1.0.1",
+    "@types/dateformat": "1.0.1",
     "array.prototype.find": "2.0.4",
     "atomicjs": "3.2.1",
     "blazy": "1.8.2",
     "dateformat": "3.0.3",
     "es6-promise": "4.2.4",
     "glob": "7.1.2",
-    "knockout": "3.5.0-beta"
+    "knockout": "3.4.2"
   },
   "devDependencies": {
     "@types/blazy": "1.5.30",
@@ -21,6 +21,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
     "node-sass": "4.8.3",
+    "prettier": "1.11.1",
     "sass-loader": "6.0.7",
     "style-loader": "0.20.3",
     "ts-loader": "3.5.0",
