- .net core upgrade - webpack update

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -17,8 +17,7 @@
     "Enrich": [
       "FromLogContext",
       "WithMachineName",
-      "WithThreadId",
-      "WithDemystifiedStackTraces"
+      "WithThreadId"
     ],
     "WriteTo": [
       {
