--- a/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
+++ b/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\common.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+      <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>dotnet-migration</AssemblyName>
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.1.1"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1"/>
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1"/>
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1"/>
       <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
   </ItemGroup>
   <ItemGroup>
