--- a/src/FlatMate.Migration/FlatMate.Migration.csproj
+++ b/src/FlatMate.Migration/FlatMate.Migration.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\common.props" />
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+      <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\*.sql" />
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.*"/>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.*"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1"/>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1"/>
       <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
-      <PackageReference Include="System.Data.SqlClient" Version="4.4.3"/>
+      <PackageReference Include="System.Data.SqlClient" Version="4.5.1"/>
   </ItemGroup>
 </Project>
