--- a/src/FlatMate.Web/FlatMate.Web.csproj
+++ b/src/FlatMate.Web/FlatMate.Web.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\build\common.props" />
     <Import Project="..\..\build\web-build.props"/>
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+      <TargetFramework>netcoreapp2.1</TargetFramework>
     <RuntimeIdentifiers>win-x64,linux-x64</RuntimeIdentifiers>
     <MvcRazorCompileOnPublish>true</MvcRazorCompileOnPublish>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
@@ -13,21 +13,19 @@
     <Content Include="_Migrations/**" CopyToPublishDirectory="Always" />
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="App.Metrics" Version="2.0.0"/>
+      <PackageReference Include="App.Metrics" Version="2.1.0"/>
       <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="2.0.0"/>
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2"/>
-      <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6"/>
+      <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.1"/>
       <PackageReference Include="prayzzz.Common.Mvc" Version="1.0.0-unstable-46.develop"/>
-    <PackageReference Include="Serilog" Version="2.6.0" />
-      <PackageReference Include="Serilog.Enrichers.Demystify" Version="0.1.0-dev-00016"/>
+      <PackageReference Include="Serilog" Version="2.7.1"/>
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
       <PackageReference Include="Serilog.Settings.Configuration" Version="2.6.1"/>
-      <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="6.3.0"/>
+      <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="6.5.0"/>
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
     <PackageReference Include="SodaPop.ConfigExplorer" Version="1.0.0" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="2.3.0"/>
-      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="2.3.0"/>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Migration\FlatMate.Migration.csproj" />
@@ -37,4 +35,11 @@
     <ProjectReference Include="..\FlatMate.Module.Lists\FlatMate.Module.Lists.csproj" />
     <ProjectReference Include="..\FlatMate.Module.Offers\FlatMate.Module.Offers.csproj" />
   </ItemGroup>
+    <ItemGroup>
+        <_ContentIncludedByDefault Remove="wwwroot\dist\app.css"/>
+        <_ContentIncludedByDefault Remove="wwwroot\dist\app.js"/>
+        <_ContentIncludedByDefault Remove="wwwroot\dist\app.js.map"/>
+        <_ContentIncludedByDefault Remove="wwwroot\dist\vendor.js"/>
+        <_ContentIncludedByDefault Remove="wwwroot\dist\vendor.js.map"/>
+    </ItemGroup>
 </Project>
