--- a/src/FlatMate.Web/wwwroot/package.json
+++ b/src/FlatMate.Web/wwwroot/package.json
@@ -5,30 +5,31 @@
   "repository": {},
   "license": "MIT",
   "dependencies": {
-    "@types/dateformat": "1.0.1",
     "array.prototype.find": "2.0.4",
     "atomicjs": "3.2.1",
     "blazy": "1.8.2",
     "dateformat": "3.0.3",
     "es6-promise": "4.2.4",
     "glob": "7.1.2",
-    "knockout": "3.4.2"
+    "knockout": "3.4.2",
+    "mini-css-extract-plugin": "^0.4.0"
   },
   "devDependencies": {
     "@types/blazy": "1.5.30",
-    "@types/knockout": "3.4.53",
+    "@types/dateformat": "1.0.1",
+    "@types/knockout": "3.4.57",
     "css-loader": "0.28.11",
-    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.11",
-    "node-sass": "4.8.3",
-    "prettier": "1.11.1",
-    "sass-loader": "6.0.7",
-    "style-loader": "0.20.3",
-    "ts-loader": "3.5.0",
-    "tslint": "5.9.1",
-    "typescript": "2.8.1",
+    "node-sass": "4.9.0",
+    "sass-loader": "7.0.3",
+    "style-loader": "0.21.0",
+    "ts-loader": "4.4.1",
+    "tslint": "5.10.0",
+    "typescript": "2.9.2",
+    "upath": "1.1.0",
     "url-loader": "1.0.1",
-    "webpack": "3.11.0"
+    "webpack": "4.12.2",
+    "webpack-cli": "^3.0.8"
   },
   "scripts": {
     "build": "./node_modules/.bin/webpack",
