--- a/src/FlatMate.Web/wwwroot/tsconfig.json
+++ b/src/FlatMate.Web/wwwroot/tsconfig.json
@@ -12,7 +12,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "strictPropertyInitialization": false,
     "target": "ES5"
   }
