- fixed remove list with favorites
- webpack

- webpack
- fix async db connection

- webpack

rename

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "Flatmate": {
-      "Url": "Server=localhost\\sqlexpress;Database=flatmate;",
+      "Url": "Server=localhost\\sqlexpress;Database=flatmate;MultipleActiveResultSets=True",
       "User": "flatmate",
       "Password": "flatmate"
     }
