--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "Flatmate": {
-      "Url": "Server=192.168.1.108;Database=flatmate;",
+      "Url": "Server=192.168.1.108;Database=flatmate;MultipleActiveResultSets=True",
       "User": "",
       "Password": ""
     }
