- updated appsetting handling

--- a/src/FlatMate.Web/appsettings.development.json
+++ b/src/FlatMate.Web/appsettings.development.json
@@ -14,17 +14,9 @@
         "Microsoft": "Information"
       }
     },
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithThreadId"
-    ],
     "WriteTo": [
       {
-        "Name": "LiterateConsole",
-        "args": {
-          "restrictedToMinimumLevel": "Information"
-        }
+        "Name": "LiterateConsole"
       }
     ]
   }
