--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -17,8 +17,7 @@
   },
   "Serilog": {
     "Enrich": [
-      "FromLogContext",
-      "WithDemystifiedStackTraces"
+      "FromLogContext"
     ],
     "Properties": {
       "Application": "flatmate"
