--- a/src/FlatMate.Web/appsettings.production.json
+++ b/src/FlatMate.Web/appsettings.production.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "Flatmate": {
-      "Url": "Server=192.168.1.108;Database=flatmate;MultipleActiveResultSets=True",
+      "Url": "",
       "User": "",
       "Password": ""
     }
@@ -16,28 +16,11 @@
     },
     "Enrich": [
       "FromLogContext",
-      "WithMachineName",
-      "WithThreadId",
-      "WithDemystifiedStackTraces"
+      "WithThreadId"
     ],
     "WriteTo": [
       {
-        "Name": "RollingFile",
-        "Args": {
-          "pathFormat": "../log/flatmate_{Date}.txt",
-          "retainedFileCountLimit": 7
-        }
-      },
-      {
         "Name": "LiterateConsole"
-      },
-      {
-        "Name": "Elasticsearch",
-        "args": {
-          "templateName": "app-logs",
-          "nodeUris": "http://192.168.1.101:9200",
-          "indexFormat": "app-flatmate-{0:yyyy.MM}"
-        }
       }
     ]
   }
