--- a/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
+++ b/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
@@ -12,7 +12,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1"/>
       <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1"/>
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1"/>
-      <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
+      <PackageReference Include="prayzzz.Common" Version="1.0.0.141-master"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\FlatMate.Migration\FlatMate.Migration.csproj" />
