--- a/src/FlatMate.Migration/FlatMate.Migration.csproj
+++ b/src/FlatMate.Migration/FlatMate.Migration.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.1.1"/>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1"/>
-      <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
+      <PackageReference Include="prayzzz.Common" Version="1.0.0.141-master"/>
       <PackageReference Include="System.Data.SqlClient" Version="4.5.1"/>
   </ItemGroup>
 </Project>
