--- a/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
+++ b/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
@@ -7,6 +7,6 @@
       <PackageReference Include="App.Metrics.Abstractions" Version="2.1.0"/>
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.1"/>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1"/>
-      <PackageReference Include="prayzzz.Common" Version="1.0.0-unstable-46.develop"/>
+      <PackageReference Include="prayzzz.Common" Version="1.0.0.141-master"/>
   </ItemGroup>
 </Project>
