--- a/test/FlatMate.Module.Common.Test/FlatMate.Module.Common.Test.csproj
+++ b/test/FlatMate.Module.Common.Test/FlatMate.Module.Common.Test.csproj
@@ -7,7 +7,7 @@
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0"/>
       <PackageReference Include="MSTest.TestAdapter" Version="1.3.2"/>
       <PackageReference Include="MSTest.TestFramework" Version="1.3.2"/>
-      <PackageReference Include="prayzzz.Common.Unit" Version="1.0.0-unstable-46.develop"/>
+      <PackageReference Include="prayzzz.Common.Unit" Version="1.0.0.141-master"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
