--- a/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
+++ b/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
@@ -7,12 +7,12 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0"/>
-      <PackageReference Include="prayzzz.Common" Version="1.0.0.141-master"/>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+      <PackageReference Include="prayzzz.Common" Version="1.1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\FlatMate.Migration\FlatMate.Migration.csproj" />
