--- a/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
+++ b/src/FlatMate.Module.Common/FlatMate.Module.Common.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="App.Metrics.Abstractions" Version="3.0.0"/>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2"/>
-      <PackageReference Include="prayzzz.Common" Version="1.0.0.141-master"/>
+      <PackageReference Include="App.Metrics.Abstractions" Version="3.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.2" />
+      <PackageReference Include="prayzzz.Common" Version="1.1.0.1" />
   </ItemGroup>
 </Project>
