--- a/src/FlatMate.Module.Infrastructure/FlatMate.Module.Infrastructure.csproj
+++ b/src/FlatMate.Module.Infrastructure/FlatMate.Module.Infrastructure.csproj
@@ -4,13 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2"/>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0"/>
-      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0"/>
-      <PackageReference Include="prayzzz.Common" Version="1.0.0.141-master"/>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
+      <PackageReference Include="prayzzz.Common" Version="1.1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
