--- a/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
+++ b/src/FlatMate.Module.Lists/FlatMate.Module.Lists.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2"/>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0"/>
-      <PackageReference Include="prayzzz.Common" Version="1.0.0.141-master"/>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+      <PackageReference Include="prayzzz.Common" Version="1.1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlatMate.Module.Account\FlatMate.Module.Account.csproj" />
