--- a/test/FlatMate.Module.Common.Test/FlatMate.Module.Common.Test.csproj
+++ b/test/FlatMate.Module.Common.Test/FlatMate.Module.Common.Test.csproj
@@ -4,10 +4,10 @@
       <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
-      <PackageReference Include="MSTest.TestAdapter" Version="1.4.0"/>
-      <PackageReference Include="MSTest.TestFramework" Version="1.4.0"/>
-      <PackageReference Include="prayzzz.Common.Unit" Version="1.0.0.141-master"/>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+      <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
+      <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+      <PackageReference Include="prayzzz.Common.Unit" Version="1.1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\FlatMate.Module.Common\FlatMate.Module.Common.csproj" />
