--- a/test/FlatMate.Module.Offers.Test/FlatMate.Module.Offers.Test.csproj
+++ b/test/FlatMate.Module.Offers.Test/FlatMate.Module.Offers.Test.csproj
@@ -7,11 +7,11 @@
     <EmbeddedResource Include="Data\*.json" />
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.2"/>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
-      <PackageReference Include="MSTest.TestAdapter" Version="1.4.0"/>
-      <PackageReference Include="MSTest.TestFramework" Version="1.4.0"/>
-      <PackageReference Include="prayzzz.Common.Unit" Version="1.0.0.141-master"/>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.2" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+      <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
+      <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+      <PackageReference Include="prayzzz.Common.Unit" Version="1.1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\FlatMate.Module.Offers\FlatMate.Module.Offers.csproj" />
