--- a/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
+++ b/src/FlatMate.Migration.DotNet/FlatMate.Migration.DotNet.csproj
@@ -1,20 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\build\common.props" />
-  <PropertyGroup>
-      <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>dotnet-migration</AssemblyName>
-    <ApplicationIcon />
-    <OutputType>Exe</OutputType>
-  </PropertyGroup>
-  <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
-      <PackageReference Include="prayzzz.Common" Version="1.1.0.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\FlatMate.Migration\FlatMate.Migration.csproj" />
-  </ItemGroup>
+
+    <Import Project="..\..\build\common.props" />
+
+    <PropertyGroup>
+        <AssemblyName>dotnet-migration</AssemblyName>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
+        <OutputType>Exe</OutputType>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+        <PackageReference Include="prayzzz.Common" Version="1.1.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\src\FlatMate.Migration\FlatMate.Migration.csproj" />
+    </ItemGroup>
+
 </Project>
