refactor and add item count

--- a/src/FlatMate.Web/appsettings.json
+++ b/src/FlatMate.Web/appsettings.json
@@ -17,7 +17,7 @@
       "Default": "Information",
       "Override": {
         "System": "Warning",
-        "Microsoft": "Warning"
+        "Microsoft": "Information"
       }
     },
     "Enrich": [
